--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/activity_forgot_password.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/activity_forgot_password.xml
@@ -1,29 +1,29 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/relative"
-    android:layout_width="720px"
-    android:layout_height="1134px"
-    android:background="@drawable/common_bg"
-    android:orientation="vertical"
-        android:splitMotionEvents="false" >
-       
+<LinearLayout android:id="@+id/relative"
+              xmlns:android="http://schemas.android.com/apk/res/android"
+              android:layout_width="720px"
+              android:layout_height="1134px"
+              android:background="@drawable/common_bg"
+              android:orientation="vertical"
+              android:splitMotionEvents="false">
 
-              <RelativeLayout
+
+    <RelativeLayout
         android:id="@+id/topRl"
         android:layout_width="match_parent"
         android:layout_height="90px"
-        android:splitMotionEvents="false" >
+        android:splitMotionEvents="false">
 
         <Button
             android:id="@+id/backBtn"
             android:layout_width="wrap_content"
             android:layout_height="82px"
             android:layout_centerVertical="true"
-            android:text="Back"
             android:background="@drawable/transparent"
+            android:text="Back"
             android:textColor="@drawable/blue_alpha_color_selector"
             android:textSize="@dimen/button_text_size"
-             />
+            />
 
         <TextView
             android:id="@+id/title"
@@ -33,103 +33,97 @@
             android:gravity="center"
             android:text="FORGOT PASSWORD"
             android:textColor="@color/blue_btn"
-            android:textSize="@dimen/button_text_size" />
+            android:textSize="@dimen/button_text_size"/>
     </RelativeLayout>
-    
-         <ScrollView 
+
+    <ScrollView
         android:id="@+id/scroll"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:splitMotionEvents="false"
         >
-    <LinearLayout
-        android:id="@+id/mainLinear"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:gravity="center_horizontal"
-        android:orientation="vertical" 
-        android:splitMotionEvents="false"
-        >
-        
-        
-        <ImageView
-            android:id="@+id/jugnooLogoBig"
-            android:layout_width="454px"
-            android:layout_height="148px"
-            android:layout_centerHorizontal="true"
-            android:layout_marginTop="20px"
-            android:background="@drawable/jugnoo_text"
-            android:tag="mwar" />
-        
-         <TextView 
-                android:id="@+id/forgotPasswordHelpText"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Enter your registered phone number for reseting your password."
-            android:textColor="@color/white"
-            android:textSize="36px" 
-            android:layout_margin="35px"
-            android:gravity="center"
-                />
-        
-        
-        
-
         <LinearLayout
-            android:id="@+id/etLayout"
-            android:layout_width="648px"
-            android:layout_height="wrap_content"
-            android:layout_below="@+id/jugnooLogoBig"
-            android:layout_centerHorizontal="true"
-            android:layout_marginTop="0px"
-            android:background="@drawable/white_bg_rounded"
+            android:id="@+id/mainLinear"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
             android:gravity="center_horizontal"
             android:orientation="vertical"
-        android:splitMotionEvents="false" >
+            android:splitMotionEvents="false"
+            >
 
-            <EditText
-                android:id="@+id/emailEt"
-                android:layout_width="620px"
-                android:layout_height="98px"
-                android:background="#0000"
-                android:hint="@string/enter_phone_number"
-                android:singleLine="true"
-                android:inputType="number"
-                android:maxLength="10"
-                android:textSize="34px"
-                android:textColor="@color/black"
-                android:capitalize="words"
-                 />
 
-            
-        </LinearLayout>
+            <ImageView
+                android:id="@+id/jugnooLogoBig"
+                android:layout_width="454px"
+                android:layout_height="148px"
+                android:layout_centerHorizontal="true"
+                android:layout_marginTop="20px"
+                android:background="@drawable/jugnoo_text"
+                android:tag="mwar"/>
 
-        <Button
-            android:id="@+id/sendEmailBtn"
-            android:layout_width="648px"
-            android:layout_height="99px"
-            android:layout_marginTop="45px"
-            android:background="@drawable/blue_btn_selector"
-            android:text="Send"
-            android:textColor="@drawable/white_color_selector"
-                        android:textSize="@dimen/button_text_size"  />
-        
-        <TextView
+            <TextView
+                android:id="@+id/forgotPasswordHelpText"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_margin="35px"
+                android:gravity="center"
+                android:text="Enter your registered phone number for reseting your password."
+                android:textColor="@color/white"
+                android:textSize="36px"
+                />
+
+            <LinearLayout
+                android:id="@+id/etLayout"
+                android:layout_width="648px"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/jugnooLogoBig"
+                android:layout_centerHorizontal="true"
+                android:layout_marginTop="0px"
+                android:background="@drawable/white_bg_rounded"
+                android:gravity="center_horizontal"
+                android:orientation="vertical"
+                android:splitMotionEvents="false">
+
+                <EditText
+                    android:id="@+id/emailEt"
+                    android:layout_width="620px"
+                    android:layout_height="98px"
+                    android:background="#0000"
+                    android:capitalize="words"
+                    android:hint="@string/enter_phone_number"
+                    android:inputType="number"
+                    android:maxLength="10"
+                    android:singleLine="true"
+                    android:textColor="@color/black"
+                    android:textSize="34px"
+                    />
+
+
+            </LinearLayout>
+
+            <Button
+                android:id="@+id/sendEmailBtn"
+                android:layout_width="648px"
+                android:layout_height="99px"
+                android:layout_marginTop="45px"
+                android:background="@drawable/blue_btn_selector"
+                android:text="Send"
+                android:textColor="@drawable/white_color_selector"
+                android:textSize="@dimen/button_text_size"/>
+
+            <TextView
                 android:id="@+id/extraTextForScroll"
                 android:layout_width="wrap_content"
                 android:layout_height="20px"
-                android:textColor="@color/white"
-                android:text="      "
-                android:textSize="10px"
                 android:layout_marginTop="20px"
-                
+                android:text="      "
+                android:textColor="@color/white"
+                android:textSize="10px"
+
                 />
-        
+
         </LinearLayout>
     </ScrollView>
-        
-         
 
-        
 
 </LinearLayout>
