--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/list_item_documents.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/list_item_documents.xml
@@ -55,39 +55,8 @@
             android:layout_height="match_parent"
             android:layout_gravity="center_vertical">
 
-            <LinearLayout
+            <RelativeLayout
                 android:id="@+id/addImageLayout"
-                android:layout_width="160px"
-                android:layout_height="160px"
-                android:layout_marginTop="28px"
-                android:layout_marginLeft="30px"
-                android:background="@drawable/add_image_box"
-                android:orientation="vertical">
-
-                <ImageView
-                    android:id="@+id/image_icon2"
-                    android:layout_width="60px"
-                    android:layout_height="60px"
-                    android:layout_marginLeft="50px"
-                    android:layout_marginTop="24px"
-                    android:background="@drawable/add_image"/>
-
-                <TextView
-                    android:id="@+id/addImage2"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="@string/add_image"
-                    android:textColor="@color/black"
-                    android:layout_marginLeft="28px"
-                    android:layout_marginTop="22px"
-                    android:textSize="20px" />
-
-
-            </LinearLayout>
-
-            <LinearLayout
-                android:id="@+id/addImageLayout2"
-                android:layout_toRightOf="@+id/addImageLayout"
                 android:layout_width="160px"
                 android:layout_height="160px"
                 android:layout_marginTop="28px"
@@ -104,16 +73,59 @@
                     android:background="@drawable/add_image"/>
 
                 <TextView
-                    android:id="@+id/addImage"
+                    android:id="@+id/addImage2"
+                    android:layout_below="@+id/image_icon"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="@string/add_image"
                     android:textColor="@color/black"
                     android:layout_marginLeft="28px"
-                    android:layout_marginTop="22px"
+                    android:layout_marginTop="12px"
                     android:textSize="20px" />
 
-            </LinearLayout>
+                <ImageView
+                    android:id="@+id/setCapturedImage"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"/>
+
+
+            </RelativeLayout>
+
+            <RelativeLayout
+                android:id="@+id/addImageLayout2"
+                android:layout_toRightOf="@+id/addImageLayout"
+                android:layout_width="160px"
+                android:layout_height="160px"
+                android:layout_marginTop="28px"
+                android:layout_marginLeft="30px"
+                android:background="@drawable/add_image_box"
+                android:orientation="vertical">
+
+                <ImageView
+                    android:id="@+id/image_icon2"
+                    android:layout_width="60px"
+                    android:layout_height="60px"
+                    android:layout_marginLeft="50px"
+                    android:layout_marginTop="24px"
+                    android:background="@drawable/add_image"/>
+
+                <TextView
+                    android:id="@+id/addImage"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/add_image"
+                    android:layout_below="@+id/image_icon2"
+                    android:textColor="@color/black"
+                    android:layout_marginLeft="28px"
+                    android:layout_marginTop="12px"
+                    android:textSize="20px" />
+
+                <ImageView
+                    android:id="@+id/setCapturedImage2"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"/>
+
+            </RelativeLayout>
 
             <TextView
                 android:id="@+id/docStatus"
